<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
    style="@style/MaWra"
    android:text="@string/panjang" />

    <EditText
        android:id="@+id/et_panjang"
        style="@style/MaWra"
        android:layout_marginBottom="16dp"
        android:inputType="numberDecimal"
        android:lines="1"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        style="@style/MaWra"
        android:text="@string/lebar" />

    <EditText
        android:id="@+id/et_lebar"
        style="@style/MaWra"
        android:layout_marginBottom="16dp"
        android:inputType="numberDecimal"
        android:lines="1"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        style="@style/MaWra"
        android:text="@string/Tinggi" />

    <EditText
        android:id="@+id/et_tinggi"
        style="@style/MaWra"
        android:layout_marginBottom="16dp"
        android:inputType="numberDecimal"
        android:lines="1"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btn_save"
        style="@style/MaWra"
        android:text="@string/save"
        android:layout_marginBottom="16dp"
        />

    <LinearLayout
        style="@style/MaWra"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_vol"
            style="@style/MaWra"
            android:layout_weight="1"
            android:text="@string/x_volume"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_circumference"
            style="@style/MaWra"
            android:layout_weight="1"
            android:text="@string/x_circumference"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_surfacearea"
            style="@style/MaWra"
            android:layout_weight="1"
            android:text="@string/survace_area"
            android:visibility="gone" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_hasil"
        style="@style/MaWra"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/Hasil"
        android:textSize="24sp"
        android:textStyle="bold"/>


</LinearLayout>